<resources>
    <string name="app_name">ColorGame</string>
    <string name="btnGreen">Verde</string>
    <string name="btnRed">Vermelho</string>
    <string name="btnBlue">Azul</string>
    <string name="btnYellow">Amarelo</string>
    <string name="score">0</string>
    <string name="color">Cor</string>
    <string name="play">Jogar</string>
    <string name="rules">Regras</string>
    <string name="gameName">Color Game</string>
    <string name="rule1">1: Escolha a cor que está escrita, e não a cor do texto</string>
    <string name="rule2">2: É preciso escolher antes de tempo acabar, se não o jogo acaba</string>
    <string name="rule3">3: Caso escolha a cor errada, o jogo acaba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gameOver">Você perdeu :(</string>
    <string name="try_again">Tentar Novamente</string>
    <string name="back_home">Início</string>
</resources>